--- a/termine/uebersicht/index2.html
+++ b/termine/uebersicht/index2.html
@@ -30,68 +30,77 @@
 			
 			<section>
 				<!-- <h4>Suche</h4> -->
-				<div class="row row-cols-1 row-cols-md-4 text-center">
-					<form action="#" method="POST" class="pt-3 sticky-top b-white">
-						<h5>Filter</h5>
-						<div class="col">
-							<div class="col-6 col-md-3">
-								<select title="Projektleitung" class="form-select mb-3" name="projektleitung" id="projektleitung">
-									<option value="0">Projektleitung</option>
-														<option value="552" >Leoni K.</option>
-														<option value="399" >Lothar W.</option>
-														<option value="2700" >Luisa G.</option>
-														<option value="2699" >Lutz E.</option>
-														<option value="1427" >Martin W.</option>
-														<option value="2657" >Matika F.</option>
-														<option value="4163" >Michaela O.</option>
-														<option value="909" >Monja S.</option>
-														<option value="3444" >Nicolas D.</option>
-														<option value="376" >Nicole R.</option>
-														<option value="3797" >Paula E.</option>
-														<option value="4078" >Petra G.</option>
-														<option value="4599" >Ravi G.</option>
-														<option value="4116" >Roman M.</option>
-														<option value="4114" >Sandra R.</option>
-														<option value="3394" >Sarah K.</option>
-														<option value="333" >Sindy H.</option>
-														<option value="166" >Steffen M.</option>
-														<option value="4077" >Tanja F.</option>
-														<option value="1" >Thomas R.</option>
-														<option value="4103" >Verena R.</option>
-												</select>
+				<div class="">
+					<form action="#" method="POST" class="row pt-3 sticky-top b-white">
+						<div class="row">
+							<div class="col-md-6">
+								
+															<h5>Filter</h5>
+															<div class="col-">
+																<div class="">
+																	<select title="Projektleitung" class="form-select mb-3" name="projektleitung" id="projektleitung">
+																		<option value="0">Projektleitung</option>
+																							<option value="552" >Leoni K.</option>
+																							<option value="399" >Lothar W.</option>
+																							<option value="2700" >Luisa G.</option>
+																							<option value="2699" >Lutz E.</option>
+																							<option value="1427" >Martin W.</option>
+																							<option value="2657" >Matika F.</option>
+																							<option value="4163" >Michaela O.</option>
+																							<option value="909" >Monja S.</option>
+																							<option value="3444" >Nicolas D.</option>
+																							<option value="376" >Nicole R.</option>
+																							<option value="3797" >Paula E.</option>
+																							<option value="4078" >Petra G.</option>
+																							<option value="4599" >Ravi G.</option>
+																							<option value="4116" >Roman M.</option>
+																							<option value="4114" >Sandra R.</option>
+																							<option value="3394" >Sarah K.</option>
+																							<option value="333" >Sindy H.</option>
+																							<option value="166" >Steffen M.</option>
+																							<option value="4077" >Tanja F.</option>
+																							<option value="1" >Thomas R.</option>
+																							<option value="4103" >Verena R.</option>
+																					</select>
+																</div>
+																<div class="">
+																	<select title="Jahr" class="form-select mb-3" name="jahr" id="jahr">
+																							<option value="2010" >2010</option>
+																							<option value="2011" >2011</option>
+																							<option value="2012" >2012</option>
+																							<option value="2013" >2013</option>
+																							<option value="2014" >2014</option>
+																							<option value="2015" >2015</option>
+																							<option value="2016" >2016</option>
+																							<option value="2017" >2017</option>
+																							<option value="2018" >2018</option>
+																							<option value="2019" >2019</option>
+																							<option value="2020" >2020</option>
+																							<option value="2021" >2021</option>
+																							<option value="2022" >2022</option>
+																							<option value="2023" selected>2023</option>
+																							<option value="2024" >2024</option>
+																							<option value="2025" >2025</option>
+																							<option value="2026" >2026</option>
+																							<option value="2027" >2027</option>
+																							<option value="2028" >2028</option>
+																					</select>
+																</div>
+															</div>
+							</div>	
+							<div class="col-md-6">
+	
+								<h5>Stichwortsuche</h5>
+								<div class="row">
+									<div class="col-8">
+										<input class="form-control mb-3" type="text" placeholder="Nach Wörtern suchen" name="suche" id="suche" value="">
+									</div>
+									<div class="col-4">
+										<button type="submit" class="btn btn-primary mb-3 width-100">Suchen</button>
+									</div>
+								</div>
 							</div>
-							<div class="col-6 col-md-3">
-								<select title="Jahr" class="form-select mb-3" name="jahr" id="jahr">
-														<option value="2010" >2010</option>
-														<option value="2011" >2011</option>
-														<option value="2012" >2012</option>
-														<option value="2013" >2013</option>
-														<option value="2014" >2014</option>
-														<option value="2015" >2015</option>
-														<option value="2016" >2016</option>
-														<option value="2017" >2017</option>
-														<option value="2018" >2018</option>
-														<option value="2019" >2019</option>
-														<option value="2020" >2020</option>
-														<option value="2021" >2021</option>
-														<option value="2022" >2022</option>
-														<option value="2023" selected>2023</option>
-														<option value="2024" >2024</option>
-														<option value="2025" >2025</option>
-														<option value="2026" >2026</option>
-														<option value="2027" >2027</option>
-														<option value="2028" >2028</option>
-												</select>
-							</div>
-						</div>
-						<h5>Stichwortsuche</h5>
-						<div class="col row">
-							<div class="col-6 col-md-3">
-								<input class="form-control mb-3" type="text" placeholder="Nach Wörtern suchen" name="suche" id="suche" value="">
-							</div>
-							<div class="col-6 col-md-3">
-								<button type="submit" class="btn btn-primary mb-3 width-100">Suchen</button>
-							</div>
+
 						</div>
 					</form>
 				</div>
