--- a/termine/uebersicht/index2.html
+++ b/termine/uebersicht/index2.html
@@ -8,11 +8,11 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/jm.css">
 </head>
-<body>
-	<main class="container">
-		<div class="row d-flex align-items-center py-3">
+<body class="bg-light">
+	<main class="container bg-light">
+		<div class="row d-flex align-items-center bg-dark text-light">
 			
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6 ">
 				<h5>Termin Übersicht</h5>
 			</div>
 			<div class="col-12 col-md-6">
@@ -26,12 +26,12 @@
 				</nav>
 			</div>
 		</div>
-		<article>
+		<article class="">
 			
 			<section>
 				<!-- <h4>Suche</h4> -->
 				<div class="">
-					<form action="#" method="POST" class="row pt-3 sticky-top b-white">
+					<form action="#" method="POST" class="row pt-3 sticky-top">
 						<div class="row">
 							<div class="col-md-6">
 								
@@ -107,28 +107,38 @@
 			</section>
 			<section>
 				<div class="jm-ergebnisse">
-					<div class="row row-cols-1 row-cols-md-4 text-center">
-						<div class="card mb-4 rounded-3 shadow-sm">
-							<div class="card-header">
-								<img alt="Logo" src="https://newdesign.cc2c.de/images/termine/abs.png" class="">
-								<h4 class="my-0 fw-normal">Antibiotic Stewardship</h4>
-							</div>
-							<div class="card-body">
-								<div class="card-title pricing-card-title">
-									<h6>Neuer Termin 26. und 27. Januar 2024: Antibiotic Stewardship – Netzwerktreffen</h6>
+					<div class="row row-cols-1 row-cols-md-3">
+						<div class="col-12 col-md-3">
+							<div class="card mb-4 p-3 rounded-3 shadow-sm">
+								<div class="card-header bg-white text-center">
+									<img alt="Logo" src="https://newdesign.cc2c.de/images/termine/abs.png" class="">
+									<h4 class="my-0 fw-normal">Antibiotic Stewardship</h4>
 								</div>
-								<ul class="list-unstyled mt-3 mb-4">
-									<li>15. - 16.12.2023</li>
-									<li>Bonn</li>
-									<li>Doris R., Lutz E.</li>
-								</ul>
-								<button type="button" class="w-100 btn btn-lg btn-outline-primary">Bearbeiten</button>
-							</div>
+								<div class="card-body">
+									<small>
+										<div class="card-title pricing-card-title"><h6>Neuer Termin 26. und 27. Januar 2024: Antibiotic Stewardship – Netzwerktreffen</h6></div>
+										<ul class="list-unstyled mt-3 mb-4 text-left">
+											<li> <strong>Datum</strong> 15. - 16.12.2023</li>
+											<li> <strong>Ort</strong> Bonn</li>
+											<li> <strong>PM</strong> Doris R., Lutz E.</li>
+										</ul>
+									</small>
+									<button type="button" class="w-100 btn btn-sm btn-outline-primary">Bearbeiten</button>
+								</div>
+							
+						</div></div>
+						<div class="col-12 col-md-3">
+							<div class="card mb-4 rounded-3 shadow-sm">test</div>
 						</div>
-						<div class="card mb-4 rounded-3 shadow-sm">test</div>
-						<div class="card mb-4 rounded-3 shadow-sm">test</div>
-						<div class="card mb-4 rounded-3 shadow-sm">test</div>
-						<div class="card mb-4 rounded-3 shadow-sm">test</div>
+						<div class="col-12 col-md-3">
+							<div class="card mb-4 rounded-3 shadow-sm">test</div>
+						</div>
+						<div class="col-12 col-md-3">
+							<div class="card mb-4 rounded-3 shadow-sm">test</div>
+						</div>
+						<div class="col-12 col-md-3">
+							<div class="card mb-4 rounded-3 shadow-sm">test</div>
+						</div>
 					</div>
 				</div>
 			</section>
