--- a/termine/uebersicht/index2.html
+++ b/termine/uebersicht/index2.html
@@ -107,36 +107,82 @@
 			</section>
 			<section>
 				<div class="jm-ergebnisse">
-					<div class="row row-cols-1 row-cols-md-3">
-						<div class="col-12 col-md-3">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+						<!-- Card 1 -->
+						<div class="col-12 col-md-6 col-lg-3">
 							<div class="card mb-4 p-3 rounded-3 shadow-sm">
-								<div class="card-header bg-white text-center">
-									<img alt="Logo" src="https://newdesign.cc2c.de/images/termine/abs.png" class="">
+								<div class="card-header bg-white">
+									<div class="|"><img alt="Logo" src="https://newdesign.cc2c.de/images/termine/abs.png" class="img-fluid"></div>
 									<h4 class="my-0 fw-normal">Antibiotic Stewardship</h4>
 								</div>
 								<div class="card-body">
 									<small>
-										<div class="card-title pricing-card-title"><h6>Neuer Termin 26. und 27. Januar 2024: Antibiotic Stewardship – Netzwerktreffen</h6></div>
-										<ul class="list-unstyled mt-3 mb-4 text-left">
+										<div class="card-title pricing-card-title">Neuer Termin 26. und 27. Januar 2024: Antibiotic Stewardship – Netzwerktreffen</div>
+										<ul class="list-unstyled mt-3 mb-4">
 											<li> <strong>Datum</strong> 15. - 16.12.2023</li>
 											<li> <strong>Ort</strong> Bonn</li>
 											<li> <strong>PM</strong> Doris R., Lutz E.</li>
+											<li> <strong>ID</strong> 12345</li>
 										</ul>
 									</small>
 									<button type="button" class="w-100 btn btn-sm btn-outline-primary">Bearbeiten</button>
+								</div>							
+							</div>
+						</div>
+						<!-- Card 2 -->
+						<div class="col-12 col-md-6 col-lg-3">
+							<div class="card mb-4 p-3 rounded-3 shadow-sm">
+								<div class="card-header bg-white">
+									<div class="|"><img alt="Logo" src="/img/kmis.png" class="img-fluid"></div>
+									<h4 class="my-0 fw-normal">21. Klinisch-Mikrobiologisch-Infektiologisches Symposium</h4>
 								</div>
-							
-						</div></div>
-						<div class="col-12 col-md-3">
+								<div class="card-body">
+									<small>
+										<div class="card-title pricing-card-title">KMIS</div>
+										<ul class="list-unstyled mt-3 mb-4">
+											<li> <strong>Datum</strong>14. - 16.12.2023</li>
+											<li> <strong>Ort</strong> Berlin</li>
+											<li> <strong>PM</strong> Sarah K., Gina I.</li>
+											<li> <strong>ID</strong> 23059</li>
+										</ul>
+									</small>
+									<button type="button" class="w-100 btn btn-sm btn-outline-primary">Bearbeiten</button>
+								</div>							
+							</div>
+						</div>
+						<!-- Card 3 -->
+						<div class="col-12 col-md-6 col-lg-3">
+							<div class="card mb-4 p-3 rounded-3 shadow-sm">
+								<div class="card-header bg-white">
+									<div class="|"><img alt="Logo" src="/img/blank.png" class="img-fluid"></div>
+									<h4 class="my-0 fw-normal">10. Residents Summit</h4>
+								</div>
+								<div class="card-body">
+									<small>
+										<div class="card-title pricing-card-title">–</div>
+										<ul class="list-unstyled mt-3 mb-4">
+											<li> <strong>Datum</strong>
+												15. - 16.12.2023</li>
+											<li> <strong>Ort</strong>Stuttgart</li>
+											<li> <strong>PM</strong> Sandra R.</li>
+											<li> <strong>ID</strong> 23176</li>
+										</ul>
+									</small>
+									<button type="button" class="w-100 btn btn-sm btn-outline-primary">Bearbeiten</button>
+								</div>							
+							</div>
+						</div>
+					
+						<div class="col-12 col-md-6 col-lg-3">
 							<div class="card mb-4 rounded-3 shadow-sm">test</div>
 						</div>
-						<div class="col-12 col-md-3">
+						<div class="col-12 col-md-6 col-lg-3">
 							<div class="card mb-4 rounded-3 shadow-sm">test</div>
 						</div>
-						<div class="col-12 col-md-3">
+						<div class="col-12 col-md-6 col-lg-3">
 							<div class="card mb-4 rounded-3 shadow-sm">test</div>
 						</div>
-						<div class="col-12 col-md-3">
+						<div class="col-12 col-md-6 col-lg-3">
 							<div class="card mb-4 rounded-3 shadow-sm">test</div>
 						</div>
 					</div>
