--- a/termine/uebersicht/bisher.html
+++ b/termine/uebersicht/bisher.html
@@ -121,10 +121,10 @@
 							</select>
 		</div>
 		<div class="col-6 col-md-3">
-			<input class="form-control mb-3" type="text" placeholder="Suche" name="suche" id="suche" value="">
+			<input class="form-control form-control-sm mb-3" type="text" placeholder="Suche" name="suche" id="suche" value="">
 		</div>
 		<div class="col-6 col-md-3">
-			<button type="submite" class="btn btn-primary mb-3 width-100">Filtern</button>
+			<button type="submit" class="btn btn-primary mb-3 width-100">Filtern</button>
 		</div>
 	</div>
 </form>
@@ -325,7 +325,8 @@
 	<a href="/termine/details/?termin=1334" class="alert alert-secondary d-block td-none">
 		<div class="row">
 			<div class="col-md-2 col-lg-1 mb-3">
-							</div>
+				<img src="../../img/dummy.png" class="img-thumbnail thumbnail-max">
+			</div>
 			<div class="col-md-10 col-lg-10">
 				<h4>KV Berlin Vertreterversammlung 19:00 Uhr</h4>
 				23.11.2023, Congress Live<br>
