--- a/termine/erstellen.html
+++ b/termine/erstellen.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Termin Übersicht</title>
+	<title>Veranstaltung erstellen</title>
 	<link rel="stylesheet" href="/css/bootstrap.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
@@ -13,7 +13,7 @@
 <body class="bg-light">
     <!-- navbar -->
     <div class="sticky-top p-0 px-4 navbar navbar-dark bg-dark navbar-expand-sm jm-zindex">			
-        <a class="navbar-brand mb-1" href="#">Termin Erstellen</a>
+        <a class="navbar-brand mb-1" href="#">Veranstaltung Erstellen</a>
         <button class="navbar-toggler m-1 p-1" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,8 +32,24 @@
     </div>
     
     <!-- Inhalt -->
-    <div class="container">
-        
+    <div class="container bg-white shadow p-5">
+        <h1 class="display-6 py-3">Veranstaltung erstellen</h1>
+        <div class="col-12 col-md-6">
+            <div class="row">
+                <label for="inputPassword" class="col-4 col-form-label">Name der Veranstaltung</label>
+                <div class="col-8">
+                  <input type="password" class="form-control" id="inputPassword">
+                </div>
+            </div>
+            <div class="row">
+                <label for="inputPassword" class="col-4 col-form-label">Name der Veranstaltung</label>
+                <div class="col-8">
+                  <input type="password" class="form-control" id="inputPassword">
+                </div>
+            </div>            
+
+
+        </div>
     </div>
 
 
